--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -1,3 +1,7 @@
 @import "bootstrap/scss/functions";
 @import "./variables";
 @import "bootstrap/scss/bootstrap";
+.cat{
+    height: 100px;
+    width: 100px;
+}
